--- a/wireframe/css/pages.css
+++ b/wireframe/css/pages.css
@@ -7,6 +7,7 @@
   position: relative;
   overflow: hidden;
   isolation: isolate;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .hero__title {
@@ -15,6 +16,8 @@
   letter-spacing: 0.04em;
   color: var(--color-white);
   line-height: 1.3;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .hero__title-sub {
